add build and govulncheck actions

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,5 +23,16 @@ jobs:
       run: |
         go get -v -t -d ./...
 
+    - name: Build
+      run: go build -o versitygw cmd/versitygw/*.go
+
     - name: Test
       run: go test -v -timeout 30s -tags=github ./...
+
+    - name: Install govulncheck
+      run: go install golang.org/x/vuln/cmd/govulncheck@latest
+      shell: bash
+
+    - name: Run govulncheck
+      run: govulncheck ./...
+      shell: bash
