--- a/tests/.env.versitygw
+++ b/tests/.env.versitygw
@@ -4,3 +4,6 @@ VERSITY_EXE=./versitygw
 BACKEND=posix
 LOCAL_FOLDER=/tmp/gw
 AWS_ENDPOINT_URL=http://127.0.0.1:7070
+BUCKET_ONE_NAME=versity-gwtest-bucket-one
+BUCKET_TWO_NAME=versity-gwtest-bucket-two
+RECREATE_BUCKETS=true
