--- a/tests/.env.default
+++ b/tests/.env.default
@@ -1,6 +1,9 @@
-AWS_REGION=us-west-2
+AWS_REGION=us-east-1
 AWS_PROFILE=versity
 VERSITY_EXE=./versitygw
 BACKEND=posix
 LOCAL_FOLDER=/tmp/gw
 AWS_ENDPOINT_URL=http://127.0.0.1:7070
+BUCKET_ONE_NAME=versity-gwtest-bucket-one
+BUCKET_TWO_NAME=versity-gwtest-bucket-two
+RECREATE_BUCKETS=true
