--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM golang:1.20
+FROM golang:latest
 
 WORKDIR /app
 
@@ -6,6 +6,7 @@ COPY go.mod ./
 RUN go mod download
 
 COPY ./ ./
+COPY certs/* /etc/pki/tls/certs/
 
 ARG IAM_DIR=/tmp/vgw
 ARG SETUP_DIR=/tmp/vgw
