--- a/tests/.env.default
+++ b/tests/.env.default
@@ -1,8 +1,11 @@
 AWS_PROFILE=versity
-AWS_ENDPOINT_URL=http://127.0.0.1:7070
+AWS_ENDPOINT_URL=https://127.0.0.1:7070
 VERSITY_EXE=./versitygw
 BACKEND=posix
 LOCAL_FOLDER=/tmp/gw
 BUCKET_ONE_NAME=versity-gwtest-bucket-one
 BUCKET_TWO_NAME=versity-gwtest-bucket-two
 RECREATE_BUCKETS=true
+CERT=$PWD/cert.pem
+KEY=$PWD/versitygw.pem
+S3CMD_CONFIG=./s3cfg.local
