--- a/tests/.env.default
+++ b/tests/.env.default
@@ -5,7 +5,7 @@ BACKEND=posix
 LOCAL_FOLDER=/tmp/gw
 BUCKET_ONE_NAME=versity-gwtest-bucket-one
 BUCKET_TWO_NAME=versity-gwtest-bucket-two
-RECREATE_BUCKETS=true
+#RECREATE_BUCKETS=true
 CERT=$PWD/cert.pem
 KEY=$PWD/versitygw.pem
-S3CMD_CONFIG=./s3cfg.local
+S3CMD_CONFIG=./tests/s3cfg.local.default
