test: file count (pagination), delimiter, invalid bucket name

--- a/tests/.env.s3.default
+++ b/tests/.env.s3.default
@@ -11,4 +11,4 @@ CERT=$PWD/cert.pem
 KEY=$PWD/versitygw.pem
 S3CMD_CONFIG=./tests/s3cfg.local.default
 SECRETS_FILE=./tests/.secrets.s3
-MC_ALIAS=versity
+MC_ALIAS=versity_s3
