--- a/.github/workflows/system.yml
+++ b/.github/workflows/system.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
 
-      - name: Install ShellCheck
+      - name: Install ShellCheck and md5
         run: sudo apt-get install shellcheck
 
       - name: Run ShellCheck
