--- a/tests/.env.default
+++ b/tests/.env.default
@@ -15,3 +15,6 @@ MC_ALIAS=versity
 LOG_LEVEL=2
 GOCOVERDIR=$PWD/cover
 USERS_FOLDER=$PWD/iam
+#TEST_LOG_FILE=test.log
+#VERSITY_LOG_FILE=versity.log
+IAM_TYPE=folder
